test/asm/negative/macro_param_data.asm
%MACRO macro param
A = param
%END

macro invalid
